--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseDemo"
         tools:targetApi="31">
+
+        <!-- use firebase push notification -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_complete_logo" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/primaryColor" />
+
         <activity
             android:name=".HomeScreen"
             android:exported="false">
@@ -42,7 +52,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false">
 
 
             <meta-data
@@ -53,6 +63,16 @@
         <activity android:name=".ForgotPasswordScreen"/>
         <activity android:name=".OtpVerificationScreen"/>
         <activity android:name=".VerificationScreen"/>
+
+        <!-- use firebase push notification -->
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
